kubernetes/apps/network/technitium/app/service-dns-clusterip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: technitium-dns
  namespace: network
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: technitium
    app.kubernetes.io/instance: technitium
  ports:
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
