kubernetes/apps/network/technitium/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: technitium-ns1
  namespace: network
  labels:
    route.scope: internal
  annotations:
    external-dns.alpha.kubernetes.io/public: "false"
    external-dns.alpha.kubernetes.io/ignore: "true"
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/guarded: "true"
    gatus.home-operations.com/endpoint: |
      group: Network
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Network
    gethomepage.dev/name: Technitium NS1
    gethomepage.dev/icon: technitium.png
    gethomepage.dev/href: https://ns1.dns.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=technitium
    gethomepage.dev/widget.type: technitium
    gethomepage.dev/widget.url: http://technitium.network.svc.cluster.local:5380
    gethomepage.dev/widget.key: ae235dd395167605bd524477ae69010e7aced11da11f070875b4523095cb106a
spec:
  parentRefs:
    - name: gateway-internal
      namespace: network
  hostnames:
    - "ns1.dns.vaderrp.com"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oidc-auth
      backendRefs:
        - name: technitium
          port: 5380

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: technitium
  namespace: network
  labels:
    route.scope: internal
  annotations:
    external-dns.alpha.kubernetes.io/public: "false"
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/guarded: "true"
    gatus.home-operations.com/endpoint: |
      group: Network
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Network
    gethomepage.dev/name: Technitium
    gethomepage.dev/icon: technitium.png
    gethomepage.dev/href: https://technitium.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=technitium
    gethomepage.dev/widget.type: technitium
    gethomepage.dev/widget.url: http://technitium.network.svc.cluster.local:5380
    gethomepage.dev/widget.key: ae235dd395167605bd524477ae69010e7aced11da11f070875b4523095cb106a
spec:
  parentRefs:
    - name: gateway-internal
      namespace: network
  hostnames:
    - "technitium.vaderrp.com"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oidc-auth
      backendRefs:
        - name: technitium
          port: 5380
